fix logo alignment in app portal navbar and deployed

--- a/sbhacks-viii-frontend/src/styles/ApplicationNavBar.css
+++ b/sbhacks-viii-frontend/src/styles/ApplicationNavBar.css
@@ -18,8 +18,8 @@
     float: left;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
     margin-left: 7vw;
+    vertical-align: middle;
   }
   .right{
     float: right;
